feat: inital styling

--- a/src/app.css
+++ b/src/app.css
@@ -34,9 +34,6 @@
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
   }
 
   .dark {
@@ -63,10 +60,24 @@
 }
 
 @layer base {
-  * {
+  *,
+  *::before,
+  *::after {
     @apply border-border;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
+
   body {
     @apply bg-background text-foreground;
+    min-height: 100vh;
+    /* padding: 5px; */
+  }
+}
+
+@layer utilities {
+  .listitem {
+    @apply border-[1px] p-4 min-w-96 bg-primary-foreground hover:bg-gray-800;
   }
 }
